@@ -198,6 +198,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   not exist
 * (bug 9121) Introduced indexpageids query parameter to list the page_id
   values of all returned page items
+* (bug 10147) Now interwiki titles are not processed but added to a separate
+  "interwiki" section of the output.
 
 == Maintenance script changes since 1.10 ==
 
